--- a/test/fixtures/shopping_cart_items.yml
+++ b/test/fixtures/shopping_cart_items.yml
@@ -1,9 +1,11 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  item: MyString
-  quantity: 1
+  product_id: 1
+  user_id: 1
+  prod_qty: 1
 
 two:
-  item: MyString
-  quantity: 1
+  product_id: 1
+  user_id: 1
+  prod_qty: 1
